--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -1,15 +1,35 @@
-<%# frozen_string_literal: true %>
-<%%= simple_form_for(@<%= singular_table_name %>) do |f| %>
-  <%%= f.error_notification %>
-  <%%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-  <div class="form-inputs">
-  <%- attributes.each do |attribute| -%>
-    <%%= f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %> %>
-  <%- end -%>
+<%%= simple_form_for(@<%= singular_table_name %>, html: { class: "container-fluid page-inner", style: "margin-top: 20px;" }) do |f| %>
+<!-- Cabeçalho do formulário -->
+<div class="page-header p-3 mb-4">
+  <div class="d-flex justify-content-between align-items-center">
+    <!-- Botão de Voltar e Título -->
+    <div class="d-flex align-items-center">
+      <%%= link_to <%= plural_table_name %>_path, class: "btn btn-light d-flex align-items-center me-3" do %>
+      <i class="fas fa-arrow-left me-2"></i> <!-- Ícone de Voltar -->
+      <%%= t("common.back", default: "Voltar") %>
+      <%% end %>
+    </div>
+    <%%= t(".header", default: "<%= singular_table_name.humanize %> Form") %>
   </div>
-
-  <div class="form-actions">
-    <%%= f.button :submit %>
+</div>
+<div class="card">
+  <div class="card-body">
+    <!-- Campos do formulário -->
+    <div class="form-inputs">
+      <%- attributes.each do |attribute| -%>
+        <div class="row mb-3">
+          <div class="col-12 col-md-6">
+            <!-- Exibe o campo de entrada ou associação (FK) de forma responsiva -->
+            <%%= f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %>, input_html: { class: "form-control", style: "max-width: 100%;", placeholder: "<%= attribute.name.humanize %>", title: "Informe <%= attribute.name.humanize.downcase %>" } %>
+          </div>
+        </div>
+      <%- end -%>
+    </div>
   </div>
+  <div class="card-footer d-flex justify-content-between">
+    <!-- Botões do formulário -->
+    <%%= f.submit t(".save", default: "Salvar"), class: "btn btn-primary" %>
+    <%%= link_to t("common.back", default: "Voltar"), <%= plural_table_name %>_path, class: "btn btn-secondary" %>
+  </div>
+</div>
 <%% end %>
