--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid " style="margin-top: 80px;">
+<div class="container-fluid " >
   <h1 class="header-title mb-4">Gerenciamento de Estabelecimentos</h1>
   <!-- Barra de Pesquisa -->
   <div class="search-bar">
