--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
       <%= render "shared/sidebar" %>
       <%= render "shared/navbar" %>
       <div class="main-content">
-        <div class="content-wrapper">
+        <div class="content-wrapper" style="margin-top: 100px;">
           <%= yield %>
         </div>
       </div>
