--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <%= stylesheet_link_tag "/assets/css/kaiadmin.css",                                                 "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "/assets/css/demo.css",                                                     "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "home_application",                                                         "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_importmap_tags %>
     <% # App JS do projeto %>
     <%= javascript_include_tag "/assets/js/core/jquery-3.7.1.min.js",                                   "data-turbo-track": "reload" %>
