--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,5 @@
  *
  *= require_tree .
  *= require_self
- */
-/* Adicionando estilos do Pagy */
-@import "pagy/pagy";
+ *= require pagy-bootstrap
+
