--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -58,6 +58,22 @@
             </ul>
           </div>
         </li>
+        <li class="nav-item">
+          <a data-bs-toggle="collapse" href="#funcoes">
+            <i class="fas fa-cogs"></i>
+            <p>Funções</p>
+            <span class="caret"></span>
+          </a>
+          <div class="collapse" id="funcoes">
+            <ul class="nav nav-collapse">
+              <li>
+                <a href="<%= funcoes_path %>">
+                  <span class="sub-item">Gerenciar Funções</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
