--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -67,7 +67,7 @@
           <div class="collapse" id="funcoes">
             <ul class="nav nav-collapse">
               <li>
-                <a href="<%= funcoes_path %>">
+                <a href="<%= root_path %>">
                   <span class="sub-item">Gerenciar Funções</span>
                 </a>
               </li>
