--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="margin-top: 100px;">
+<div class="container-fluid" >
   <p style="color: green"><%%= notice %></p>
   <!-- Título da Página com ícone de Voltar e Botão Incluir -->
   <div class="d-flex justify-content-between align-items-center mb-4">
