--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid" >
   <p style="color: green"><%%= notice %></p>
   <!-- Título da Página com ícone de Voltar e Botão Incluir -->
-  <div class="d-flex justify-content-between align-items-center mb-4">
+  <div class="d-flex justify-content-between align-items-center mb-4 page-header-light shadow">
     <div class="d-flex align-items-center">
       <%%= link_to root_path, class: "btn btn-outline-secondary btn-sm me-3" do %>
         <i class="fa fa-arrow-left"></i> <!-- Ícone de Voltar -->
