--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -1,4 +1,4 @@
-<%%= simple_form_for(@<%= singular_table_name %>, html: { class: "container-fluid page-inner", style: "margin-top: 20px;" }) do |f| %>
+<%%= simple_form_for(@<%= singular_table_name %>, html: { class: "container-fluid page-inner" }) do |f| %>
 <!-- Cabeçalho do formulário -->
 <div class="page-header p-3 mb-4">
   <div class="d-flex justify-content-between align-items-center">
