refactor: footer layout

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid " >
-  <h1 class="header-title mb-4">Gerenciamento de </h1>
+  <h1 class="header-title mt-5 mb-4">Gerenciamento  </h1>
   <!-- Barra de Pesquisa -->
   <div class="search-bar">
     <input type="text" class="form-control" id="searchInput" placeholder="Pesquise por nome ou tipo..." />
