--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
             <%= yield %>
           </div>
         </div>
+        <!-- <%=  "shared/footer"%> -->
       </div>
     </div>
   </body>
