--- a/app/assets/stylesheets/home_application.css
+++ b/app/assets/stylesheets/home_application.css
@@ -10,6 +10,22 @@ body {
   margin: 0;
   padding: 0;
   background-color: white;
+  height: 100%;
+}
+
+/* Container principal */
+.page-content {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+/* Estilos do Footer */
+.footer {
+  margin-top: auto;
+  width: 100%;
+}
+.content-wrapper {
+  flex: 1;
 }
 .page-content .content-wrapper {
   margin-top: 90px; /* Adiciona o espaçamento superior */
