--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -23,7 +23,7 @@
         </div>
         <!-- Tabela de <%= plural_table_name.humanize %> -->
         <div class="table-responsive">
-          <table id="<%= plural_table_name %>Table" class="table table-striped table-hover display" cellspacing="0" width="100%">
+          <table id="<%= plural_table_name %>Table" class="table text-center table-striped table-hover display" cellspacing="0" width="100%">
             <thead>
               <tr>
                 <th class="text-center"><%%= t("common.actions", default: "Ações") %></th>
@@ -32,14 +32,6 @@
                 <% end %>
               </tr>
             </thead>
-            <tfoot>
-              <tr>
-                <th class="text-center"><%%= t("common.actions", default: "Ações") %></th>
-                <% attributes.each do |attribute| %>
-                  <th><%%= t("activerecord.attributes.<%= singular_table_name %>.<%= attribute.name %>", default: "<%= attribute.name.humanize %>") %></th>
-                <% end %>
-              </tr>
-            </tfoot>
             <tbody>
               <%% @<%= plural_table_name %>.each do |<%= singular_table_name %>| %>
               <tr>
@@ -69,7 +61,7 @@
               <%% end %>
             </tbody>
           </table>
-          <div class="pag-bar mt-5 pt-5">
+          <div class="pag-bar mt-2 pt-5">
             <%%= pagy_bootstrap_nav(@pagy).html_safe%>
           </div>
         </div>
