--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -1,68 +1,75 @@
-<div class="index-body  page-header-light shadow">
-  <div class="d-flex align-items-center">
+<div class="index-body page-header-light shadow">
+  <div class="header-container ">
     <%%= link_to root_path, class: "btn btn-outline-secondary btn-sm me-3" do %>
-      <i class="fa fa-arrow-left"></i> <!-- Ícone de Voltar -->
+      <i class="fa fa-arrow-left"></i>
       <%% end %>
       <h1 class="h4 mb-0"><%%= t("common.<%= plural_table_name %>", default: "<%= plural_table_name.humanize %>") %></h1>
     </div>
-    <!-- Botão para Criar Novo <%= singular_table_name.humanize %> -->
     <%%= link_to new_<%= singular_table_name %>_path, class: "btn btn-incluir d-flex align-items-center" do %>
     <i class="fa fa-plus me-2"></i> <%%= t("common.new_<%= singular_table_name %>", default: "Incluir") %>
     <%% end %>
   </div>
-  <div class="container-fluid" >
-    <p style="color: green"><%%= notice %></p>
-    <!-- Card de <%= plural_table_name.humanize %> -->
+  <div class="container-fluid ">
+    <p style="notice-text"><%%= notice %></p>
     <div class="col-md-12">
-      <div class="card">
-        <div class="card-header">
-          <h4 class="card-title"><%%= t("common.<%= plural_table_name %>", default: "<%= plural_table_name.humanize %>") %></h4>
+      <div class="card shadow">
+        <!-- Card Header com o Formulário de Pesquisa -->
+        <div class="card-header search-card-header">
+          <%%= form_with url: <%= plural_table_name %>_path, method: :get, local: true, class: "d-flex align-items-center gap-3 flex-nowrap w-100" do |f| %>
+          <div class="input-group shadow-sm search-field">
+            <%%= f.text_field :nome, placeholder: t("common.search_by_name", default: "Pesquisar por nome..."), class: "form-control" %>
+          </div>
+          <div class="input-group shadow-sm search-field">
+            <%%= f.text_field :descricao, placeholder: t("common.search_by_description", default: "Pesquisar por descrição..."), class: "form-control" %>
+          </div>
+          <button id="searchButton" type="submit" class="btn btn-primary shadow-sm">
+            <i class="fa fa-search me-2"></i> <%%= t("common.search_btn", default: "") %>
+          </button>
+          <%% end %>
         </div>
-        <div class="card-body">
-          <!-- Removido o campo de pesquisa aqui -->
-        </div>
-        <!-- Tabela de <%= plural_table_name.humanize %> -->
-        <div class="table-responsive">
-          <table id="<%= plural_table_name %>Table" class="table text-center table-striped table-hover display" cellspacing="0" width="100%">
-            <thead>
-              <tr>
-                <th class="text-center"><%%= t("common.actions", default: "Ações") %></th>
-                <% attributes.each do |attribute| %>
-                  <th><%%= t("activerecord.attributes.<%= singular_table_name %>.<%= attribute.name %>", default: "<%= attribute.name.humanize %>") %></th>
-                <% end %>
-              </tr>
-            </thead>
-            <tbody>
-              <%% @<%= plural_table_name %>.each do |<%= singular_table_name %>| %>
-              <tr>
-                <td class="text-center">
-                  <!-- Dropdown de Ações -->
-                  <div class="dropdown">
-                    <button class="btn btn-sm dropdown-toggle" type="button" id="acoesDropdown<%%= <%= singular_table_name %>.id %>" data-bs-toggle="dropdown" aria-expanded="false">
-                      <i class="fa fa-cog"></i>
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="acoesDropdown<%%= <%= singular_table_name %>.id %>">
-                      <li><%%= link_to t("common.show", default: "Ver"), <%= singular_table_name %>, class: "dropdown-item" %></li>
-                      <li><%%= link_to t("common.edit", default: "Editar"), edit_<%= singular_table_name %>_path(<%= singular_table_name %>), class: "dropdown-item" %></li>
-                      <li><%%= button_to t("common.delete", default: "Excluir"), <%= singular_table_name %>, method: :delete, data: { confirm: t("common.are_you_sure", default: "Tem certeza?") }, class: "dropdown-item text-danger" %></li>
-                    </ul>
-                  </div>
-                </td>
-                <% attributes.each do |attribute| %>
-                  <% if attribute.reference? %>
-                    <!-- Atributo de associação (FK)-->
-                    <td><%%=<%= singular_table_name %>.<%= attribute.name.split('_id').first %>.nome if <%= singular_table_name %>.<%= attribute.name.split('_id').first %>.present? %></td>
-                  <% else %>
-                    <!--  Atributo comum -->
-                    <td><%%=<%= singular_table_name %>.<%= attribute.name %>%></td>
+        <div class="card-body shadow">
+          <!-- Tabela de <%= plural_table_name.humanize %> -->
+          <div class="table-responsive">
+            <table id="<%= plural_table_name %>Table" class="table text-center table-striped table-hover display" cellspacing="0" width="100%">
+              <thead>
+                <tr>
+                  <th class="text-center"><%%= t("common.actions", default: "Ações") %></th>
+                  <% attributes.each do |attribute| %>
+                    <th><%%= t("activerecord.attributes.<%= singular_table_name %>.<%= attribute.name %>", default: "<%= attribute.name.humanize %>") %></th>
                   <% end %>
-                <% end %>
-              </tr>
-              <%% end %>
-            </tbody>
-          </table>
-          <div class="pag-bar mt-2 pt-5">
-            <%%= pagy_bootstrap_nav(@pagy).html_safe%>
+                </tr>
+              </thead>
+              <tbody>
+                <%% @<%= plural_table_name %>.each do |<%= singular_table_name %>| %>
+                <tr>
+                  <td data-label="<%%= t('common.actions', default: 'Ações') %>">
+                    <div class="dropdown">
+                      <button class="btn btn-sm dropdown-toggle" type="button" id="acoesDropdown<%%= <%= singular_table_name %>.id %>" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fa fa-cog"></i>
+                      </button>
+                      <ul class="dropdown-menu" aria-labelledby="acoesDropdown<%%= <%= singular_table_name %>.id %>">
+                        <li><%%= link_to t("common.show", default: "Ver"), <%= singular_table_name %>, class: "dropdown-item" %></li>
+                        <li><%%= link_to t("common.edit", default: "Editar"), edit_<%= singular_table_name %>_path(<%= singular_table_name %>), class: "dropdown-item" %></li>
+                        <li><%%= button_to t("common.delete", default: "Excluir"), <%= singular_table_name %>, method: :delete, data: { confirm: t("common.are_you_sure", default: "Tem certeza?") }, class: "dropdown-item text-danger" %></li>
+                      </ul>
+                    </div>
+                  </td>
+                  <% attributes.each do |attribute| %>
+                    <% if attribute.reference? %>
+                      <!-- Atributo de associação (FK)-->
+                      <td><%%= <%= singular_table_name %>.<%= attribute.name.split('_id').first %>.nome if <%= singular_table_name %>.<%= attribute.name.split('_id').first %>.present? %></td>
+                    <% else %>
+                      <!-- Atributo comum -->
+                      <td><%%= <%= singular_table_name %>.<%= attribute.name %> %></td>
+                    <% end %>
+                  <% end %>
+                </tr>
+                <%% end %>
+              </tbody>
+            </table>
+            <div id="pagyNav" class="pag-bar">
+              <%%= pagy_bootstrap_nav(@pagy, link_extra: 'class="btn btn-outline-secondary btn-sm mx-1"').html_safe %>
+            </div>
           </div>
         </div>
       </div>
