refactor: estilizacao forms e buttons

--- a/app/assets/stylesheets/home_application.css
+++ b/app/assets/stylesheets/home_application.css
@@ -176,7 +176,7 @@ b {
   color: black;
 }
 
-/* Estilo personalizado para o botão "Incluir" */
+/* BUTTONS CUSTOMIZADOS */
 .btn-incluir {
   margin-top: 20px;
   padding: 0.65rem 1.4rem;
@@ -201,16 +201,52 @@ b {
 }
 
 .btn-secondary {
-  background: 005171 !important;
-  background-color: #005171 !important;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #d9d9d9 !important;
+  background-color: #d9d9d9; /* Cor do botão secundário */
+  border-color: #000000 !important;
+  margin-top: 20px;
+  padding: 0.65rem 1.4rem;
+  color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 0.75rem;
+  font-size: 16px;
+  display: inline-flex;
+  align-items: center;
+  transition: background-color 0.3s;
 }
 
 .btn-secondary:hover,
 .btn-secondary:focus,
 .btn-secondary:disabled {
-  color: #ffffff !important;
-  background: 005171 !important;
-  border-color: 005171 !important;
+  color: #000000 !important;
+  background: #d9d9d9 !important;
+  border-color: #000000 !important;
+}
+
+#searchButton {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 25px;
+  padding: 10px 20px;
+  font-size: 14px;
+  font-weight: 500;
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+#searchButton:hover {
+  background-color: #0056b3;
+  transform: scale(1.05);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#searchButton:active {
+  background-color: #003f7f;
+  transform: scale(0.98);
 }
 
 /* DATATABLES */
@@ -280,7 +316,9 @@ b {
 .notice-text {
   color: green;
 }
-
+.page-inner {
+  padding: 2rem; /* Espaçamento interno da página */
+}
 .form-search {
   display: flex;
   align-items: center;
@@ -297,32 +335,12 @@ b {
   max-width: 300px;
 }
 
-#searchButton {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 25px;
-  padding: 10px 20px;
-  font-size: 14px;
-  font-weight: 500;
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
-  transition: all 0.3s ease-in-out;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.card {
+  border: 1px solid #dee2e6; /* Cor da borda do card */
 }
-
-#searchButton:hover {
-  background-color: #0056b3;
-  transform: scale(1.05);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+.form-control {
+  border-color: #ced4da; /* Cor da borda do campo de entrada */
 }
-
-#searchButton:active {
-  background-color: #003f7f;
-  transform: scale(0.98);
-}
-
 .pag-bar {
   padding-top: 1.6rem;
   display: flex;
