--- a/app/assets/stylesheets/home_application.css
+++ b/app/assets/stylesheets/home_application.css
@@ -41,10 +41,15 @@ a {
   font-weight: bold;
 }
 
+h1.h4.mb-0 {
+  color: #000000;
+}
+mb0 {
+  color: #222;
+}
 h1,
 h2,
 h3,
-h4,
 h5,
 h6 {
   font-family: "Nunito", sans-serif;
