--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -18,7 +18,7 @@
         <div class="row mb-3">
           <div class="col-12 col-md-6">
             <!-- Exibe o campo de entrada ou associação (FK) de forma responsiva -->
-            <%%= f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %>, input_html: { class: "form-control", style: "max-width: 100%;", placeholder: "<%= attribute.name.humanize %>", title: "Informe <%= attribute.name.humanize.downcase %>" } %>
+            <%%= f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %>, input_html: { class: "form-control", style: "width: 100%;", placeholder: "<%= attribute.name.humanize %>", title: "Informe <%= attribute.name.humanize.downcase %>" } %>
           </div>
         </div>
       <%- end -%>
