--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -227,7 +227,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Account Setting</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Sair</a>
+                    <%= button_to "Sair", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
                   </li>
                 </div>
               </ul>
