--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid " >
+<div class="container-fluid " id="inicio"  >
   <h1 class="header-title mt-5 mb-4">Gerenciamento  </h1>
   <!-- Barra de Pesquisa -->
   <div class="search-bar">
@@ -55,5 +55,8 @@
   margin-top: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  #inicio{
+    margin-top: 100px;
   }
 </style>
