--- a/app/assets/stylesheets/home_application.css
+++ b/app/assets/stylesheets/home_application.css
@@ -13,12 +13,6 @@ body {
   height: 100%;
 }
 
-/* Container principal */
-.page-content {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-}
 /* Estilos do Footer */
 .footer {
   margin-top: auto;
@@ -26,13 +20,10 @@ body {
 }
 .content-wrapper {
   flex: 1;
+  margin-top: 70px;
 }
-.page-content .content-wrapper {
-  margin-top: 90px; /* Adiciona o espaçamento superior */
-}
-
-.content-wrapper .navbar-static {
-  z-index: 1021;
+#inicio {
+  margin-top: 100px;
 }
 
 /* Títulos E Textos*/
