--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -74,6 +74,22 @@
             </ul>
           </div>
         </li>
+        <li class="nav-item">
+          <a data-bs-toggle="collapse" href="#estabelecimentos">
+            <i class="fas fa-store"></i>
+            <p>Estabelecimentos</p>
+            <span class="caret"></span>
+          </a>
+          <div class="collapse" id="estabelecimentos">
+            <ul class="nav nav-collapse">
+              <li>
+                <a href="<%= estabelecimentos_path %>">
+                  <span class="sub-item">Gerenciar Estabelecimentos</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
